--- a/react-debugging.html
+++ b/react-debugging.html
@@ -62,15 +62,19 @@
           }
           // No need to change anything ABOVE this line ^
 
+          //need JSX Fragments
+          //needs `this` in front of method calls
+          // needed to add function drawcard on first button onClick
           return(
+            <>
               <h1>Draw a Card</h1>
-              <button onClick={}>
+              <button onClick={this.drawCard}>
                 Click to Draw a Card
               </button>
-              <button onClick={shuffle}>
+              <button onClick={this.shuffle}>
                 Return Cards and Shuffle Deck
               </button>
-              <div style={handStyles}>
+              <div style={this.handStyles}>
                 {this.state.hand.map((card, index) => {
                   return (
                     <div style={cardStyles} key={index}>
@@ -79,6 +83,7 @@
                   )
                 })}
               </div>
+            </>
           )
         }
       }
